--- a/index.html
+++ b/index.html
@@ -477,17 +477,14 @@
         if (isMobile) {
             // Convert to Blob first (best for Android WebView/APK)
             const pdfBlob = doc.output('blob');
-            const reader = new FileReader();
-            
-            reader.onloadend = function() {
-                const base64data = reader.result;
-                const link = document.createElement('a');
-                link.href = base64data;
-                link.download = fileName;
-                link.target = '_blank'; 
-                document.body.appendChild(link);
-                link.click();
-                document.body.removeChild(link);
+            const url = URL.createObjectURL(pdfBlob);
+            const link = document.createElement('a');
+            link.href = url;
+            link.download = fileName;
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
+            setTimeout(() => URL.revokeObjectURL(url), 100);
             };
             // Read as DataURL to trigger the download manager in mobile apps
             reader.readAsDataURL(pdfBlob);
@@ -504,6 +501,7 @@
 </script>
 </body>
 </html>
+
 
 
 
